fixed images and videos content spacing

--- a/assets/styles/docs.scss
+++ b/assets/styles/docs.scss
@@ -231,6 +231,7 @@ $bd-gutter-x: 3rem;
     }
     iframe {
         width: 100%;
+        margin-bottom: $spacer;
     }
 
     a[target="_blank"]::after {
